css/main.css
/* ... */
section {
  position: relative;
  min-width: 360px;
}

a {
  text-decoration: none;
  outline: 0;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  -webkit-transition: all var(--_animspeed-medium) var(--_animbezier);
  -moz-transition: all var(--_animspeed-medium) var(--_animbezier);
  transition: all var(--_animspeed-medium) var(--_animbezier);
}

img {
  display: block;
  width: 100%;
  height: auto;
}

.overflow-hidden {
  overflow: hidden !important;
}

.components {
  position: relative;
}

.components__item {
  position: relative;
  padding: 8rem 10%;
  border-bottom: 1px solid var(--stroke-elements);
}

.components__caption {
  display: block;
  font: normal 400 1.3rem/1 var(--_font-default);
  color: var(--t-medium);
  text-transform: uppercase;
  letter-spacing: 0.1rem;
  margin-bottom: 2rem;
}

.spacer {
  height: 300px;
}

/* ------------------------------------------------*/
/* Basic Styles End */
/* ------------------------------------------------*/
/* ------------------------------------------------*/
/* Animations - Transitions Start */
/* ------------------------------------------------*/
/* ------------------------------------------------*/
/* Animations - Transitions End */
/* ------------------------------------------------*/
/* ------------------------------------------------*/
/* Animations - Backgrounds Start */
/* ------------------------------------------------*/
.video-background {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

#video-wrapper {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: transparent;
}

.video {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: transparent;
  background-position: center center;
  -moz-background-size: contain;
       background-size: contain;
  -o-object-fit: cover;
     object-fit: cover;
}

/* ------------------------------------------------*/
/* Animations - Backgrounds End */
/* ------------------------------------------------*/
/* ------------------------------------------------*/
/* Elements - Typography Start */
/* ------------------------------------------------*/
h1 {
  font: normal 300 5.6rem var(--_font-accent);
  color: var(--t-bright);
}
@media only screen and (min-width: 768px) {
  h1 {
    font-size: 9rem;
  }
}
@media only screen and (min-width: 1200px) {
  h1 {
    font-size: 11rem;
  }
}
@media only screen and (min-width: 1400px) {
  h1 {
    font-size: 12.6rem;
  }
}
@media only screen and (min-width: 1600px) {
  h1 {
    font-size: 16rem;
  }
}

@media only screen and (min-width: 992px) {
  .headline-80-desktop .headline__title {
    max-width: 67rem;
  }
}
@media only screen and (min-width: 1200px) {
  .headline-80-desktop .headline__title {
    max-width: none;
  }
}

.headline__subtitle.space-top {
  margin-top: 4.6rem;
}
.headline__subtitle.space-bottom {
  margin-bottom: 3.8rem;
}
@media only screen and (min-width: 768px) {
  .headline__subtitle.space-top {
    margin-top: 5.7rem;
  }
  .headline__subtitle.space-bottom {
    margin-bottom: 4.2rem;
  }
}
@media only screen and (min-width: 992px) {
  .headline__subtitle.space-top {
    margin-top: 6.4rem;
  }
  .headline__subtitle.space-bottom {
    margin-bottom: 4.9rem;
  }
}
@media only screen and (min-width: 1200px) {
  .headline__subtitle.space-top {
    margin-top: 5.8rem;
  }
  .headline__subtitle.space-bottom {
    margin-bottom: 4rem;
  }
}
@media only screen and (min-width: 1400px) {
  .headline__subtitle.space-top {
    margin-top: 6.3rem;
  }
  .headline__subtitle.space-bottom {
    margin-bottom: 5.7rem;
  }
}
@media only screen and (min-width: 1600px) {
  .headline__subtitle.space-top {
    margin-top: 6.8rem;
  }
  .headline__subtitle.space-bottom {
    margin-bottom: 4.1rem;
  }
}

h2 {
  font: normal 300 4.6rem var(--_font-accent);
  color: var(--t-bright);
}
@media only screen and (min-width: 768px) {
  h2 {
    font-size: 8rem;
  }
}
@media only screen and (min-width: 1200px) {
  h2 {
    font-size: 9rem;
  }
}
@media only screen and (min-width: 1400px) {
  h2 {
    font-size: 10rem;
  }
}
@media only screen and (min-width: 1600px) {
  h2 {
    font-size: 14rem;
  }
}

.h2__text {
  margin-top: 4.5rem;
}
@media only screen and (min-width: 768px) {
  .h2__text {
    margin-top: 5.7rem;
    max-width: 67rem;
  }
}
@media only screen and (min-width: 992px) {
  .h2__text {
    margin-top: 6.4rem;
  }
}
@media only screen and (min-width: 1200px) {
  .h2__text {
    margin-top: 5.9rem;
    max-width: 78rem;
  }
  .h2__text.text-half {
    max-width: 54%;
  }
  .h2__text.text-twothirds {
    max-width: 67%;
  }
}
@media only screen and (min-width: 1400px) {
  .h2__text {
    margin-top: 6.6rem;
  }
  .h2__text.text-half {
    max-width: 50%;
  }
}
@media only screen and (min-width: 1600px) {
  .h2__text {
    margin-top: 6.9rem;
  }
  .h2__text.text-half {
    max-width: 45%;
  }
}

h3 {
  font: normal 400 3.4rem var(--_font-accent);
  color: var(--t-bright);
}
h3.dark {
  color: var(--t-per-bright-dark);
  font-weight: 400;
}
h3.light {
  color: var(--t-per-bright-light);
  font-weight: 300;
}
@media only screen and (min-width: 768px) {
  h3 {
    font-size: 4.4rem;
  }
}
@media only screen and (min-width: 1200px) {
  h3 {
    font-size: 5rem;
  }
}
@media only screen and (min-width: 1400px) {
  h3 {
    font-size: 5.6rem;
  }
}
@media only screen and (min-width: 1600px) {
  h3 {
    font-size: 6.4rem;
  }
}

h4 {
  font: normal 400 2.6rem var(--_font-accent);
  color: var(--t-bright);
}
@media only screen and (min-width: 1400px) {
  h4 {
    font-size: 3rem;
  }
}
@media only screen and (min-width: 1600px) {
  h4 {
    font-size: 3.6rem;
  }
}

h5 {
  font: normal 500 2.2rem var(--_font-accent);
  color: var(--t-bright);
}

h6 {
  font: normal var(--font-weight-base) 1.8rem/1.6 var(--_font-default);
  color: var(--t-bright);
}
/* ... */

